--- a/src/www/styles/main.scss
+++ b/src/www/styles/main.scss
@@ -79,9 +79,17 @@ html {
       }
       #container {
         flex-grow: 1;
-        height: 100%;
         display: flex;
         flex-direction: column;
+
+        @media screen and (max-width: 639px) {
+          overflow: auto;
+        }
+
+        @media screen and (min-width: 640px) {
+          height: 100%;
+        }
+
         #toolbar {
           border-bottom: solid 1px rgb(180, 180, 180);
           flex-shrink: 0;
